k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: caro-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: caro.example.com

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: caro-web-service
                port:
                  number: 80
